@@ -8,6 +8,7 @@ Version 1.5.6
 * Support forgetting cached account (#830)
 * Enabling XCODE 11.4 recommended settings by default per customer request.
 * Move correlationId to MSIDBaseBrokerOperationRequest 
+* Add a new pipeline for MSAL C++ checks
 * Support bypassing redirectUri validation also on macOS
 * Indicate whether SSO extension account is available for device wide SSO (#825)
 * Add swift static lib target to support AES GCM.
